--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Boston Massacre, 1770 -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: 'Under the Liberty Tree: A Story of The ''Boston Massacre'''
 url: http://www.gutenberg.org/ebooks/31555
